k8s/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: shopstack
  labels:
    app.kubernetes.io/name: cart
    app.kubernetes.io/part-of: shopstack
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cart
        app.kubernetes.io/part-of: shopstack
    spec:
      serviceAccountName: cart
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: cart
      containers:
        - name: cart
          image: shopstack/cart:dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /ready
              port: http
            periodSeconds: 2
            failureThreshold: 15
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 15
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      terminationGracePeriodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: shopstack
  labels:
    app.kubernetes.io/name: cart
    app.kubernetes.io/part-of: shopstack
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cart
  ports:
    - name: http
      port: 80
      targetPort: http
